--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/7.application-error-handling-specification-and-common-error-solutions/2.common-errors-and-solutions-of-mysql-mode/6.table-already-exists-with-error-code-1050-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/7.application-error-handling-specification-and-common-error-solutions/2.common-errors-and-solutions-of-mysql-mode/6.table-already-exists-with-error-code-1050-of-mysql-mode.md
@@ -28,7 +28,7 @@ ERROR 1050 (42S01): Table 'student' already exists
 
 * 兼容 MySQL 错误码：1050
 
-有关错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/9.error-code/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md)。
+有关错误码的详细说明及介绍，请参见 [错误码概述](../../../../7.reference/9.error-code/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md)。
 
 ## 可能原因
 
