--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.write-data-of-oracle-mode/2.update-data-of-oracle-mode-in-develop.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.write-data-of-oracle-mode/2.update-data-of-oracle-mode-in-develop.md
@@ -6,7 +6,7 @@
 
 在更新表数据前，请确认以下事项：
 
-* 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接方式概述](../../1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
+* 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接方式概述](../1.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
   <main id="notice" type='explain'>
    <h4>说明</h4>
