--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/7.application-error-handling-specification-and-common-error-solutions-of-oracle-mode/2.common-errors-and-solutions-of-oracle-mode/7.table-does-not-exists-with-error-code-ora-04043-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/7.application-error-handling-specification-and-common-error-solutions-of-oracle-mode/2.common-errors-and-solutions-of-oracle-mode/7.table-does-not-exists-with-error-code-ora-04043-of-oracle-mode.md
@@ -19,7 +19,7 @@ ORA-04043: object SYS.STUDENT does not exist
 
 * SQLSTATE：HY000
 
-关于错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/9.error-code/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md)。
+关于错误码的详细说明及介绍，请参见 [错误码概述](../../../../7.reference/9.error-code/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md)。
 
 ## 可能原因
 
