--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/7.application-error-handling-specification-and-common-error-solutions-of-oracle-mode/2.common-errors-and-solutions-of-oracle-mode/8.unique-key-conflict-with-error-code-ora-00001-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/7.application-error-handling-specification-and-common-error-solutions-of-oracle-mode/2.common-errors-and-solutions-of-oracle-mode/8.unique-key-conflict-with-error-code-ora-00001-of-oracle-mode.md
@@ -19,7 +19,7 @@ ORA-00001: unique constraint '3' for key 'PRIMARY' violated
 
 * SQLSTATE：23000
 
-关于错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/9.error-code/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md)。
+关于错误码的详细说明及介绍，请参见 [错误码概述](../../../../7.reference/9.error-code/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md)。
 
 ## 可能原因
 
@@ -54,8 +54,8 @@ ORA-00001: unique constraint '3' for key 'PRIMARY' violated
    <main id="notice" type='explain'>
       <h4>说明</h4>
       <ul>
-      <li>您也可以通过 <code>MERGE INTO</code> 语句来避免唯一键冲突。详细操作步骤，请参见 <a href="../../4.write-data/2.write-data-of-oracle-mode/4.replace-data-of-oracle-mode-in-develop.md">替换数据</a>。</li>
-      <li>如果确定不需要保留已存在的行，可以根据条件将不需要的行删除。具体操作请参见 <a href="../../4.write-data/2.write-data-of-oracle-mode/3.delete-data-of-oracle-mode-in-develop.md">删除数据</a>。</li>
+      <li>您也可以通过 <code>MERGE INTO</code> 语句来避免唯一键冲突。详细操作步骤，请参见 <a href="../../4.write-data-of-oracle-mode/4.replace-data-of-oracle-mode-in-develop.md">替换数据</a>。</li>
+      <li>如果确定不需要保留已存在的行，可以根据条件将不需要的行删除。具体操作请参见 <a href="../../4.write-data-of-oracle-mode/3.delete-data-of-oracle-mode-in-develop.md">删除数据</a>。</li>
       </ul>
    </main>
 
