--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.database-object-planning-of-mysql-mode/1.create-database-of-mysql-mode-in-develop.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.database-object-planning-of-mysql-mode/1.create-database-of-mysql-mode-in-develop.md
@@ -15,7 +15,7 @@
 
 在创建数据库前，您需要确认以下事项：
 
-* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接方式概述](../../1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接方式概述](../1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
