--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/7.application-error-handling-specification-and-common-error-solutions/1.application-error-handling-specification-of-mysql-mode/1.error-code-introduction-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/7.application-error-handling-specification-and-common-error-solutions/1.application-error-handling-specification-of-mysql-mode/1.error-code-introduction-of-mysql-mode.md
@@ -21,11 +21,11 @@ ERROR 1054 (42S22): Unknown column ‘haha’ in ‘field list’
 出于兼容性设计原则，对于同一个错误，在 MySQL 模式（`sys` 租户属于 MySQL 模式）和 Oracle 模式下可能返回不同的错误码。例如，OceanBase 内部错误码 `-5217` 表示 SQL 语句中引用了不存在的列名，它在两种租户模式下的表现如下表所示。
 
 |   租户模式       | 错误码               |  SQLSTATE       |  错误消息                   |
-|-----------------|-------------------—|------------------|----------------------------|
+|-----------------|-------------------|------------------|----------------------------|
 |  MySQL          | 1054               |   42S22          |  Unknown column            |
 |  Oracle         | 904，即 ORA-00904  |   42S22          |  invalid identifier        |
 
-使用错误码解析工具 ob_error 10，可以查询错误码的含义，以及内外错误码的映射关系。关于错误码解析工具 ob_error 的详细介绍，请参见 [ob_error](../../../7.reference/15.command-line-tools/10.ob-error.md)。
+使用错误码解析工具 ob_error 10，可以查询错误码的含义，以及内外错误码的映射关系。关于错误码解析工具 ob_error 的详细介绍，请参见 [ob_error](../../../../7.reference/15.command-line-tools/10.ob-error.md)。
 
 ## SQLSTATE
 
