--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md
@@ -49,7 +49,7 @@ dml_statement:
 * 解释查询计划，并把计划信息保存在指定表 `test` 内。
   
   ```shell
-  /* 创建表 */
+  /* 创建表 test */
   obclient> CREATE TABLE test (statement_id VARCHAR(30), plan_id INT, gmt_create TIMESTAMP, 
      remarks VARCHAR(4000), operator VARCHAR(255), options VARCHAR(255), object_node VARCHAR(40), 
      object_owner VARCHAR(128), object_name VARCHAR(128), object_alias VARCHAR(261), object_instance INT, 
@@ -63,7 +63,8 @@ dml_statement:
 
   obclient> CREATE TABLE t1(c1 INT);
   Query OK, 0 rows affected
-
+  
+  /* 解释查询计划，并把计划信息保存在指定表 test 内 */
   obclient> EXPLAIN INTO test SELECT COUNT(*) FROM t1;
   +--------------------------------------------------------------------------+
   | Query Plan                                                               |
@@ -85,7 +86,7 @@ dml_statement:
   +--------------------------------------------------------------------------+
   14 rows in set
 
-  obclient> SELECT DBMS_XPLAN.DISPLAY('TYPICAL',null,'test')\G;
+  obclient> SELECT DBMS_XPLAN.DISPLAY('TYPICAL',null,'test')\G
   *************************** 1. row ***************************
   DBMS_XPLAN.DISPLAY('TYPICAL',null,'test'):
    =================================================
@@ -130,7 +131,7 @@ dml_statement:
   +--------------------------------------------------------------------------+
   14 rows in set
 
-  obclient> SELECT DBMS_XPLAN.DISPLAY('TYPICAL','test2','test')\G;
+  obclient> SELECT DBMS_XPLAN.DISPLAY('TYPICAL','test2','test')\G
   *************************** 1. row ***************************
   DBMS_XPLAN.DISPLAY('TYPICAL','test2','test'): =================================================
   |ID|OPERATOR         |NAME|EST.ROWS|EST.TIME(us)|
@@ -155,7 +156,8 @@ dml_statement:
   ```sql
   obclient> EXPLAIN SELECT * FROM t1,t2 WHERE t1.c2=t2.c2 AND t2.c1 > 4\G
   *************************** 1. row ***************************
-  Query Plan: =======================================
+  Query Plan: 
+  =======================================
   |ID|OPERATOR   |NAME|EST. ROWS|COST   |
   ---------------------------------------
   |0 |HASH JOIN  |    |9801000  |5933109|
@@ -178,7 +180,8 @@ dml_statement:
   ```sql
   obclient> EXPLAIN EXTENDED_NOADDR SELECT * FROM t1,t2 WHERE t1.c2=t2.c2 AND t2.c1 > 4\G
   *************************** 1. row ***************************
-  Query Plan: =======================================
+  Query Plan: 
+  =======================================
   |ID|OPERATOR   |NAME|EST. ROWS|COST   |
   ---------------------------------------
   |0 |HASH JOIN  |    |9801000  |5933109|
@@ -206,7 +209,8 @@ dml_statement:
   ```sql
   obclient> EXPLAIN FORMAT=TRADITIONAL SELECT * FROM t1,t2 WHERE t1.c2=t2.c2 AND t2.c1 > 4\G
   *************************** 1. row ***************************
-  Query Plan: =======================================
+  Query Plan: 
+  =======================================
   |ID|OPERATOR   |NAME|EST. ROWS|COST   |
   ---------------------------------------
   |0 |HASH JOIN  |    |9801000  |5933109|
