--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.explain-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.explain-of-oracle-mode.md
@@ -57,7 +57,7 @@ dml_statement:
 * 解释查询计划，并把计划信息保存在指定表 `test` 内。
   
   ```shell
-  /* 创建表 */
+  /* 创建表 test */
   obclient> CREATE TABLE test (statement_id VARCHAR(30), plan_id INT, gmt_create TIMESTAMP, 
      remarks VARCHAR(4000), operator VARCHAR(255), options VARCHAR(255), object_node VARCHAR(40), 
      object_owner VARCHAR(128), object_name VARCHAR(128), object_alias VARCHAR(261), object_instance INT, 
@@ -72,9 +72,11 @@ dml_statement:
   obclient> CREATE TABLE t1(c1 INT);
   Query OK, 0 rows affected
 
+  /* 如果时间格式报错，可以通过如下命令重新设置 TIMESTAMP 格式*/
   obclient> ALTER SESSION SET NLS_TIMESTAMP_FORMAT = 'YYYY-MM-DD HH24:MI:SS.FF';
   Query OK, 0 rows affected
-
+  
+  /* 解释查询计划，并把计划信息保存在指定表 test 内 */
   obclient> EXPLAIN INTO test SELECT COUNT(*) FROM t1;
   +--------------------------------------------------------------------------+
   | Query Plan                                                               |
@@ -142,7 +144,7 @@ dml_statement:
   +--------------------------------------------------------------------------+
   14 rows in set 
 
-  obclient>  SELECT * FROM TABLE(DBMS_XPLAN.DISPLAY(table_name=>'test',statement_id=>'test2'));
+  obclient> SELECT * FROM TABLE(DBMS_XPLAN.DISPLAY(table_name=>'test',statement_id=>'test2'));
   +--------------------------------------------------------------------------+
   | COLUMN_VALUE                                                             |
   +--------------------------------------------------------------------------+
@@ -201,7 +203,8 @@ dml_statement:
   ```sql
   obclient> EXPLAIN SELECT * FROM tbl1,tbl2 WHERE tbl1.col2=tbl2.col2 AND tbl2.col1 > 4\G
   *************************** 1. row ***************************
-  Query Plan: =======================================
+  Query Plan: 
+  =======================================
   |ID|OPERATOR   |NAME|EST. ROWS|COST   |
   ---------------------------------------
   |0 |HASH JOIN  |    |9801000  |2442404|
@@ -226,7 +229,8 @@ dml_statement:
   ```sql
   obclient> EXPLAIN EXTENDED_NOADDR SELECT * FROM tbl1,tbl2 WHERE tbl1.col2=tbl2.col2 AND tbl2.col1 > 4\G
   *************************** 1. row ***************************
-  Query Plan: =======================================
+  Query Plan: 
+  =======================================
   |ID|OPERATOR   |NAME|EST. ROWS|COST   |
   ---------------------------------------
   |0 |HASH JOIN  |    |9801000  |2442404|
@@ -255,7 +259,8 @@ dml_statement:
   ```sql
   obclient> EXPLAIN FORMAT=TRADITIONAL INSERT INTO TBL1 VALUES(1,1)\G
   *************************** 1. row ***************************
-  Query Plan: ====================================
+  Query Plan: 
+  ====================================
   |ID|OPERATOR   |NAME|EST. ROWS|COST|
   ------------------------------------
   |0 |INSERT     |    |1        |1   |
