--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/87.show-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/87.show-of-mysql-mode.md
@@ -235,7 +235,7 @@ opt_for_grant_user:
   4 rows in set 
   ```
 
-* 使用 `SHOW TRACE` 查看某一 SQL 的执行信息。
+* 使用 `SHOW TRACE` 查看某一 SQL 的执行信息，并以 JSON 的格式输出。
   
   ```shell
   obclient> SET ob_enable_show_trace = 1;
