--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/36.show-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/36.show-of-oracle-mode.md
@@ -88,7 +88,7 @@ SHOW {
   2 rows in set
   ```
 
-* 使用 `SHOW TRACE` 查看某一 SQL 的执行信息。
+* 使用 `SHOW TRACE` 查看某一 SQL 的执行信息，并以 JSON 的格式输出。
   
   ```shell
   obclient> SET ob_enable_show_trace = 1;
