--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md
@@ -17,8 +17,8 @@ SELECT
         [GROUP BY group_expression_list [WITH ROLLUP] [HAVING condition]]
         [ORDER BY order_expression_list]
         [limit_clause]
-        [FOR UPDATE [opt_for_update_wait]];
-
+        [FOR UPDATE [opt_for_update_wait]]
+        [LOCK IN SHARE MODE];
 select_expr:
  table_name.*
   | table_alias_name.*
@@ -95,24 +95,25 @@ opt_for_update_wait:
 
 ## 参数解释
 
-|                                             参数                                              |                                                                                                                                                                                                         描述                                                                                                                                                                                                          |
-|---------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| ALL \| DISTINCT \| UNIQUE \| SQL_CALC_FOUND_ROWS                                            | 在数据库表中，可能会包含重复值。 <ul><li> `DISTINCT` \| `UNIQUE`：在查询结果中相同的行只显示一行。</li>   <li> `ALL`：则列出所有的行，缺省为 `ALL`。  </li>   <li>  `SQL_CALC_FOUND_ROWS`：在带有 `LIMIT` 子句的查询中，记录全部返回的行数，并可以在接下来执行的 `FOUND_ROWS()` 函数获取全部行数。</li></ul>                                                                                              |
-| select_expr                                                                                 | 列出要查询的表达式或列名，以逗号（,）分隔。也可以用星号（\*）表示所有列。                                                                                                                                                                                                                                                                                                                                                                              |
-| AS othername                                                                                | 为输出字段重新命名。                                                                                                                                                                                                                                                                                                                                                                                                          |
-| FROM table_references                                                                       | 指名了从哪个表或哪些表中读取数据（支持多表查询）。                                                                                                                                                                                                                                                                                                                                                                                           |
-| WHERE where_conditions                                                                      | 可选项，`WHERE` 字句用来设置一个筛选条件，查询结果中仅包含满足条件的数据。`where_conditions` 为表达式。                                                                                                                                                                                                                                                                                                                                                   |
-| GROUP BY group_by_list                                                                      | 用于进行分类汇总。                                                                                                                                                                                                                                                                                                                                                                                                           |
-| WITH ROLLUP                                                                                 | 将各分组进行汇总以表示更高级的聚合（也称为超聚合），并产生额外的行。                                                                                                                                                                                                                                                                                                                                                                                  |
-| HAVING search_confitions                                                                    | `HAVING` 字句与 `WHERE` 字句类似，但是 `HAVING` 字句可以使用聚合函数（如 `SUM`，`AVG` 等）。                                                                                                                                                                                                                                                                                                                                                  |
+|                                参数                                |                           描述                       |
+|--------------------------------------------------------------------|---------------------------------------------------------|
+| ALL \| DISTINCT \| UNIQUE \| SQL_CALC_FOUND_ROWS                                            | 在数据库表中，可能会包含重复值。 <ul><li> `DISTINCT` \| `UNIQUE`：在查询结果中相同的行只显示一行。</li>   <li> `ALL`：则列出所有的行，缺省为 `ALL`。  </li>   <li>  `SQL_CALC_FOUND_ROWS`：在带有 `LIMIT` 子句的查询中，记录全部返回的行数，并可以在接下来执行的 `FOUND_ROWS()` 函数获取全部行数。</li></ul>    |
+| select_expr                                                                                 | 列出要查询的表达式或列名，以逗号（,）分隔。也可以用星号（\*）表示所有列。   |
+| AS othername                                                                                | 为输出字段重新命名。   |
+| FROM table_references                                                                       | 指名了从哪个表或哪些表中读取数据（支持多表查询）。   |
+| WHERE where_conditions                                                                      | 可选项，`WHERE` 字句用来设置一个筛选条件，查询结果中仅包含满足条件的数据。`where_conditions` 为表达式。  |
+| GROUP BY group_by_list                                                                      | 用于进行分类汇总。    |
+| WITH ROLLUP                                                                                 | 将各分组进行汇总以表示更高级的聚合（也称为超聚合），并产生额外的行。  |
+| HAVING search_confitions                                                                    | `HAVING` 字句与 `WHERE` 字句类似，但是 `HAVING` 字句可以使用聚合函数（如 `SUM`，`AVG` 等）。 |
 | SAMPLE \[BLOCK\] \[ ALL \| BASE \| INCR\] (sample_percent)                                  | 只扫描一部分记录。 <ul><li> `BLOCK` 表示扫描随机数据块进行，默认为扫描随机行。   </li>   <li>  `ALL` 表示扫描所有数据，缺省为 `ALL`。   </li>   <li>  `BASE` 表示扫描基线数据。   </li>   <li>  `INCR` 表示扫描增量数据。   </li>   <li>  `sample_percent` 表示采样比例，单位为 %，可以使用 `INTEGER` 或 `DECIMAL` 类型。  </li></ul>                          |
-| SEED integer                                                                                | 采样的种子值，取值范围为 \[0,4294967295\]，相同的采样种子值总会返回相同的结果。                                                                                                                                                                                                                                                                                                                                                                    |
+| SEED integer                                                                                | 采样的种子值，取值范围为 \[0,4294967295\]，相同的采样种子值总会返回相同的结果。  |
 | {USE \| FORCE \| IGNORE} {KEY \| INDEX} \[FOR {JOIN \| ORDER BY \| GROUP BY}\] (index_list) | 进行查询是否使用指定的索引。 <ul><li> `USE`：指示某项操作使用索引。   </li>   <li>  `FORCE`：指示某些操作强制使用索引。   </li>   <li>  `IGNORE`：是指某项操作不使用索引。   </li>   <li>  `FOR JOIN`：指定索引进行连接。   </li>   <li>  `FOR ORDER BY`：指定索引进行排序。   </li>   <li>  `FOR GROUP BY`：指定索引进行分组。</li></ul>    |
-| SQL_CALC_FOUND_ROWS                                                                         | 用来按升序（`ASC`）或者降序（`DESC`）显示查询结果。缺省为 `ASC`。                                                                                                                                                                                                                                                                                                                                                                           |
-| \[LIMIT {\[offset,\] row_count \|row_count OFFSET offset}\]                                 | 强制 `SELECT` 语句返回指定的记录数。 `LIMIT` 接受一个或两个数字参数。参数必须是一个整数常量。 <ul><li> 如果给定两个参数，第一个参数指定第一个返回记录行的偏移量，第二个参数指定返回记录行的最大数目。 初始记录行的偏移量是 0。   </li>   <li>  如果只给定一个参数，它表示返回记录行的最大数目，偏移量为 0。 </li></ul>                                                                                                                    |
-| FOR UPDATE                                                                                  | 对查询结果所有行上排他锁，以阻止其他事务的并发修改，或阻止在某些事务隔离级别时的并发读取。 <ul><li> `WAIT`：表示等待其他事务释放资源的时间，如果超过该时间，则返回无法获得资源，单位为秒。   </li>   <li>  `NOWAIT` \| `NO_WAIT`：表示不等待其他事务释放资源，直接返回无法获得资源。  </li></ul>                                                                                                                                                            |
-| PARTITION(partition_list)                                                                   | 指定查询表的分区信息。例如 `partition(p0,p1...)`。                                                                                                                                                                                                                                                                                                                                                                                |
+| SQL_CALC_FOUND_ROWS                                                                         | 用来按升序（`ASC`）或者降序（`DESC`）显示查询结果。缺省为 `ASC`。  |
+| \[LIMIT {\[offset,\] row_count \|row_count OFFSET offset}\]                                 | 强制 `SELECT` 语句返回指定的记录数。 `LIMIT` 接受一个或两个数字参数。参数必须是一个整数常量。 <ul><li> 如果给定两个参数，第一个参数指定第一个返回记录行的偏移量，第二个参数指定返回记录行的最大数目。 初始记录行的偏移量是 0。   </li>   <li>  如果只给定一个参数，它表示返回记录行的最大数目，偏移量为 0。 </li></ul>    |
+| FOR UPDATE                                                                                  | 对查询结果所有行上排他锁，以阻止其他事务的并发修改，或阻止在某些事务隔离级别时的并发读取。 <ul><li> `WAIT`：表示等待其他事务释放资源的时间，如果超过该时间，则返回无法获得资源，单位为秒。   </li>   <li>  `NOWAIT` \| `NO_WAIT`：表示不等待其他事务释放资源，直接返回无法获得资源。  </li></ul>   |
+| PARTITION(partition_list)                                                                   | 指定查询表的分区信息。例如 `partition(p0,p1...)`。     |
 | dblink_name | 使用 dblink 查询远端数据库表的数据。|
+| LOCK IN SHARE MODE | 锁定查询结果。|
 
 ## 示例
 
@@ -243,6 +244,20 @@ opt_for_update_wait:
 
   ```sql
   obclient> SELECT * FROM a ORDER BY id LIMIT 1 FOR UPDATE;
+  ```
+
+* 使用 `LOCK IN SHARE MODE` 锁定对表 `a` 的查询结果。
+  
+  ```shell
+  obclient> SELECT * FROM a LOCK IN SHARE MODE;
+  +------+------+------+
+  | id   | name | num  |
+  +------+------+------+
+  |    1 | a    |  100 |
+  |    2 | b    |  200 |
+  |    3 | a    |  50 |
+  +------+------+------+
+  3 row in set
   ```
 
 ### 使用 dblink 查询数据的示例
