--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md
@@ -118,7 +118,7 @@ unpivot_in_clause：
 | FROM table_references               | 指定选择数据的对象。   |
 | PARTITION(partition_list)           | 指定查询表的分区信息。例如：`partition(p0,p1...)` 。 |
 | table_factor | 指定表名（基表、可更新视图）、特殊子查询等，并支持直接查询函数。|
-| table_alias_name                    | 指定选择数据对象的别名，格式为原名称空格别名。|
+| table_alias_name                    | 指定选择数据对象的别名。|
 | joined_table                        | 指定多表查询的联接方式。 <ul><li> `[INNER] JOIN` 为内联接，`INNER` 为可选项。仅返回满足联接条件的数据。   </li><li> `[OUTER] JOIN` 为外联接，`OUTER` 为可选项。 </li><li> `LEFT [OUTER]` 表示左外联接。返回左表中的所有公共列值。   </li><li> `RIGHT [OUTER]` 表示右外联接。返回右表中的所有公共列值。   </li><li> `FULL [OUTER]` 表示全外联接。即除了内联接之外，两个表中未在内联接结果中返回的行将被保留并用空值扩展。 </li></ul>  |
 | ON expression                       | 指定多表联接的联接条件。  |
 | WHERE where_conditions              | 指定筛选条件，查询结果中仅包含满足条件的数据，为可选项。`where_conditions` 为表达式。   |
