--- a/zh-CN/7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/152.dbms-sql-oracle/12.last-error-position-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/152.dbms-sql-oracle/12.last-error-position-of-oracle-mode.md
@@ -4,6 +4,12 @@
 
 当 `DBMS_SQL.PARSE` 中的 SQL 语句出现错误时，立刻调用 `DBMS_SQL.LAST_ERROR_POSITION` 可以获得错误出现的位置。
 
+  <main id="notice" >
+    <h4>功能适用性</h4>
+    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+  </main>
+
+
 ## 语法
 
 ```sql
