--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/26.create-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/26.create-table-of-mysql-mode.md
@@ -143,7 +143,7 @@ partition_count | subpartition_count:
 | KEY \| INDEX                                         | 为创建的表指定键或索引。 如果不指定索引名，则会使用索引引用的第一列作为索引名，如果命名存在重复，则会使用下划线（_）+ 序号的方式命名。（例如，使用 `c1` 列创建的索引如果命名重复，则会将索引命名为 `c1_2`。） 您可以通过 `SHOW INDEX` 语句查看表上的索引。    |
 | key_part        | 创建（函数）索引。 |
 | index_col_name  | 指定索引的列名，每个列名后都支持 ASC（升序），不支持 DESC（降序）。默认为升序。 建立索引的排序方式为：首先以 `index_col_name` 中第一个列的值排序；该列值相同的记录，按下一列名的值排序；以此类推。 |
-| expr            | 表示合法的函数索引表达式，且允许是布尔表达式，例如 `c1=c1`。<br>**注意** OceanBase 数据库当前版本禁止创建生成列上的函数索引。             |
+| expr            | 表示合法的函数索引表达式，且允许是布尔表达式，例如 `c1=c1`。<main id="notice" type='notice'><h4>注意</h4><p> OceanBase 数据库当前版本禁止创建生成列上的函数索引。 </p></main>              |
 | ROW_FORMAT                                           | 指定表是否开启 Encoding 存储格式。 <ul><li> `redundant`：不开启 Encoding 存储格式。   <li> `compact`：不开启 Encoding 存储格式。</li>   <li> `dynamic`：Encoding 存储格式。   <li> `compressed`：Encoding 存储格式。</li>   <li> `default`：等价 `dynamic` 模式。</li></ul>    |
 | \[GENERATED ALWAYS\] AS (expr) \[VIRTUAL \| STORED\] | 创建生成列，`expr` 为用于计算列值的表达式。 <ul><li> `VIRTUAL`：列值不会被存储，而是在读取行时，在任何 `BEFORE` 触发器之后立即计算 。虚拟列不占用存储空间。</li>   <li> `STORED`：在插入或更新行时评估和存储列值。存储列确实需要存储空间并且可以被索引。</li></ul>    |
 | BLOCK_SIZE                                           | 指定表的微块大小。  |
@@ -155,7 +155,7 @@ partition_count | subpartition_count:
 | comment                                              | 注释。     |
 | PCTFREE                                              | 指定宏块保留空间百分比。   |
 | parallel_clause                                      | 指定表级别的并行度： <ul><li> `NOPARALLEL`：并行度为 `1`，默认配置 </li>  <li> `PARALLEL integer`：指定并行度，`integer` 取值大于等于 `1`。 </li></ul>    |
-| DUPLICATE_SCOPE |  指定复制表的属性，取值如下：<ul><li> `none`：表示该表是一个普通表，为默认值。<li></li> `cluster`：表示该表是一个复制表，Leader 需要将事务复制到当前租户的所有 F（全能）副本及 R（只读）副本。</li></ul>OceanBase 数据库目前仅支持 `cluster` 级别的复制表。|
+| DUPLICATE_SCOPE |  指定复制表的属性，取值如下：<ul><li> `none`：表示该表是一个普通表，为默认值。</li><li> `cluster`：表示该表是一个复制表，Leader 需要将事务复制到当前租户的所有 F（全能）副本及 R（只读）副本。</li></ul>OceanBase 数据库目前仅支持 `cluster` 级别的复制表。|
 | CHECK                                                | 限制列中的值的范围。 <ul><li> 如果对单个列定义 `CHECK` 约束，那么该列级约束可以写到列定义中，并且可以指定名称。</li>   <li> 如果对一个表定义 `CHECK` 约束，那么此约束会应用于表中多个列，且允许出现在列的定义前。在删除表时，表中创建的 `CHECK` 约束也会一起被删除。</li></ul> 可以通过如下方式查看约束信息： <li> 使用 `SHOW CREATE TABLE` 命令 </li>  <li> 查看 `information_schema.TABLE_CONSTRAINTS` 视图 </li>  <li> 查看 `information_schema.CHECK_CONSTRAINTS` 视图  </li> </ul>    |
 | constraint_name                                      | 约束名称，最多包含 64 个字符。 <ul><li> 约束名称的开头结尾中间都允许有空格，但需要用"\`"标识名称的开头和结尾。   <li> 约束名称可以包含特殊字符"$"。   <li> 如果约束名称为保留字，需要用"\`"标识，否则会报错。   <li> 在同一 Database 下不允许 `CHECK` 约束的名称重复。</ul>    |
 | expression                                           | 约束表达式。 <ul><li> `expression` 不允许为空。   <li> `expression` 结果不能为非布尔类型。  <li> `expression` 不能包含不存在的列。 </ul>   |
