--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
@@ -209,7 +209,7 @@ on_commit_option:
 | ENABLE/DISABLE ROW MOVEMENT | 是否允许在不同分区间移动的分区键更新。  |
 | ON COMMIT DELETE ROWS       | 事务级临时表，提交时删除数据。  |
 | ON COMMIT PRESERVE ROWS     | 会话级临时表，会话结束时删除数据。  |
-| parallel_clause             | 指定表级别的并行度： <ul><li> `NOPARALLEL`：并行度为 1，为默认配置。</li>   <li> `PARALLEL integer`：指定并行度，`integer` 取值大于等于 `1`。</li> </ul>   **注意**  当指定并行度时，优先级关系如下：通过 Hint 指定的并行度 \> 通过 `ALTER SESSION` 指定的并行度 \> 表级别的并行度。   |
+| parallel_clause             | 指定表级别的并行度： <ul><li> `NOPARALLEL`：并行度为 1，为默认配置。</li>   <li> `PARALLEL integer`：指定并行度，`integer` 取值大于等于 `1`。</li> </ul> <main id="notice" type='notice'><h4>注意</h4><p> 当指定并行度时，优先级关系如下：通过 Hint 指定的并行度 \> 通过 <code>ALTER SESSION</code> 指定的并行度 \> 表级别的并行度。 </p></main>    |
 | DUPLICATE_SCOPE |  指定复制表的属性，取值如下：<ul><li> `none`：表示该表是一个普通表，为默认值。<li></li> `cluster`：表示该表是一个复制表，Leader 需要将事务复制到当前租户的所有 F（全能）副本及 R（只读）副本。</li></ul>OceanBase 数据库目前仅支持 `cluster` 级别的复制表。|
 
 ## 示例
