--- a/zh-CN/7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/145.dbms-session-oracle/13.reset-package-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/145.dbms-session-oracle/13.reset-package-of-oracle-mode.md
@@ -2,6 +2,12 @@
 
 `RESET_PACKAGE` 过程用于清空 Session 上所有的 Package 变量。 
 
+  <main id="notice" >
+    <h4>功能适用性</h4>
+    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+  </main>
+
+
 ## 语法
 
 ```sql
