--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.modify-the-restore-source-of-the-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.modify-the-restore-source-of-the-standby-tenant.md
@@ -2,7 +2,7 @@
 
 在确保归档日志无丢失的情况下，可以修改备租户的恢复源。
 
-在创建备租户时，执行 `RESTORE` 命令时已为备租户设置了默认的恢复源，当需要给备租户切换恢复源时，您可以修改备租户的恢复源。例如，对于通过备租户恢复出新备租户的场景，可以将新备租户的恢复源修改为主租户的归档目的端。
+在创建备租户时，执行 `RESTORE` 命令时已为备租户设置了默认的恢复源，当需要给备租户切换恢复源时，您可以修改备租户的恢复源。例如，对于通过已有备租户恢复出新备租户的场景，可以将新备租户的恢复源修改为主租户的归档目的端。
 
 ## 操作步骤
 
