--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-由于备租户只能从数据备份和日志归档中恢复出来，并且既可以从主租户的数据备份和日志归档中恢复，也可以从备租户的数据备份和日志归档中恢复，故在新建备租户前，需要确认以下事项：
+由于备租户只能从数据备份和日志归档中恢复出来，并且既可以从主租户的数据备份和日志归档中恢复，也可以从已有备租户的数据备份和日志归档中恢复，故在新建备租户前，需要确认以下事项：
 
 * 从主租户的数据备份和日志归档中恢复出备租户的场景
 
@@ -76,11 +76,11 @@
 
 ## 更改新备租户的恢复终点
 
-刚恢复出的新备租户不会连续同步主租户或备租户归档的日志，需要通过 `RECOVER` 命令设置备租户的恢复终点。
+刚恢复出的新备租户不会连续同步主租户或已有备租户归档的日志，需要通过 `RECOVER` 命令设置新备租户的恢复终点。
 
 1. 使用恢复出来的新备租户或新备租户所在集群的 `sys` 租户登录到数据库。
 
-2. 根据实际使用场景，执行 `RECOVER` 命令，更改备租户的恢复终点。
+2. 根据实际使用场景，执行 `RECOVER` 命令，更改新备租户的恢复终点。
 
    * 恢复到指定时间戳
 
@@ -88,9 +88,9 @@
      ALTER SYSTEM RECOVER STANDBY [TENANT = tenant_name] UNTIL TIME='timestamp';
      ```
 
-     其中，仅在使用 `sys` 租户执行命令时，才需要在语句中添加 `TENANT = tenant_name` 参数指定备租户名；`timestamp` 为指定的时间戳，单位为纳秒。
+     其中，仅在使用 `sys` 租户执行命令时，才需要在语句中添加 `TENANT = tenant_name` 参数指定新备租户名；`timestamp` 为指定的时间戳，单位为纳秒。
 
-     执行该语句后，备租户恢复到该位点位置，且包括该位点。
+     执行该语句后，新备租户将会恢复到该位点位置，且包括该位点。
 
    * 恢复到指定 SCN
 
@@ -98,9 +98,9 @@
      ALTER SYSTEM RECOVER STANDBY [TENANT = tenant_name] UNTIL SCN=scn;
      ```
 
-     其中，仅在使用 `sys` 租户执行命令时，才需要在语句中添加 `TENANT = tenant_name` 参数指定备租户名；`scn` 为指定的 SCN，是一个逻辑的、系统内部的时间戳。
+     其中，仅在使用 `sys` 租户执行命令时，才需要在语句中添加 `TENANT = tenant_name` 参数指定新备租户名；`scn` 为指定的 SCN，是一个逻辑的、系统内部的时间戳。
 
-     执行该语句后，备租户恢复到该位点位置，且包括该位点。
+     执行该语句后，新备租户将会恢复到该位点位置，且包括该位点。
 
    * 恢复无终点
 
@@ -108,9 +108,9 @@
      ALTER SYSTEM RECOVER STANDBY [TENANT = tenant_name] UNTIL UNLIMITED;
      ```
 
-     其中，仅在使用 `sys` 租户执行命令时，才需要在语句中添加 `TENANT = tenant_name` 参数指定备租户名；`UNLIMITED` 表示无穷大。
+     其中，仅在使用 `sys` 租户执行命令时，才需要在语句中添加 `TENANT = tenant_name` 参数指定新备租户名；`UNLIMITED` 表示无穷大。
 
-     执行该语句后，备租户会进入持续同步模式。
+     执行该语句后，新备租户将会进入持续同步模式。
 
 ## 相关文档
 
