update 420 compatibility-with-oracle

--- a/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-oracle/1.overview-of-compatibility-with-oracle.md
+++ b/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-oracle/1.overview-of-compatibility-with-oracle.md
@@ -101,7 +101,7 @@ OceanBase 数据库支持 Oracle 数据库中绝大部分的 SQL 语法。
 
 * 支持类 Oracle 数据库的并行查询
 
-  OceanBase 数据库中 DOP 需要手动通过 `hint/session` 变量指定，暂不支持 Auto DOP 功能。
+  OceanBase 数据库支持 Auto DOP 功能，也可以手动通过 Hint 或者 Session 变量指定 DOP。
   
 * 支持并行 DML
 
