--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/3.create-a-standby-tenant-by-backup-and-recovery.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/3.create-a-standby-tenant-by-backup-and-recovery.md
@@ -235,11 +235,11 @@
 
 ## 步骤三：开启日志持续同步
 
-使用默认的 `RESTORE` 命令创建的备租户，不会连续同步主租户或备租户归档的日志，需要手动再执行 `RECOVER` 命令重新设置备租户的恢复终点，开启日志持续同步模式。
+使用默认的 `RESTORE` 命令创建的新备租户，不会连续同步主租户或源端备租户归档的日志，需要手动再执行 `RECOVER` 命令重新设置新备租户的恢复终点，开启日志持续同步模式。
 
 1. 使用管理员用户登录新备租户或新备租户所在集群的 `sys` 租户。
 
-2. 根据实际使用场景，执行 `RECOVER` 命令，更改备租户的恢复终点。
+2. 根据实际使用场景，执行 `RECOVER` 命令，更改新备租户的恢复终点。
 
    * 新备租户所在集群的 `sys` 租户为新备租户开启日志持续同步
 
@@ -255,7 +255,7 @@
      ALTER SYSTEM RECOVER STANDBY TENANT = standby_tenant UNTIL UNLIMITED;
      ```
 
-   * 备租户为本租户开启日志持续同步
+   * 新备租户为本租户开启日志持续同步
 
      ```sql
      ALTER SYSTEM RECOVER STANDBY UNTIL UNLIMITED;
@@ -263,7 +263,7 @@
 
 3. 再次查询 `DBA_OB_TENANTS` 视图，通过 `SYNC_SCN` 字段确认新备租户的同步位点。
 
-   其中，`SCN_TO_TIMESTAMP(SYNC_SCN)` 列显示了备租户当前的同步进度。
+   其中，`SCN_TO_TIMESTAMP(SYNC_SCN)` 列显示了新备租户当前的同步进度。
 
    * 新备租户所在集群的 `sys` 租户查询视图
 
