--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
@@ -37,7 +37,7 @@
 
    <main id="notice" type='notice'>
    <h4>注意</h4>
-   <p>对于从 OceanBase 数据库 V4.0.x 版本升级到 V4.1.0 版本的场景，版本升级后需要更改备份路径。</p>
+   <p>对于从 OceanBase 数据库 V4.0.x 版本升级到 V4.1.0 版本的场景，版本升级后需要更改备份路径。对于从 OceanBase 数据库 V4.1.x 版本升级到 V4.2.0 版本的场景，版本升级后不需要更改备份路径。</p>
    </main>
 
    例如：
