--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/1.introduction-to-sql-execution-plans.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/1.introduction-to-sql-execution-plans.md
@@ -17,15 +17,25 @@ OceanBase 数据库的执行计划命令有三种模式：`EXPLAIN BASIC`、`EXP
 `EXPLAIN` 命令格式如下：​​
 
 ```sql
-EXPLAIN [BASIC | EXTENDED | PARTITIONS | FORMAT = format_name] [PRETTY | PRETTY_COLOR] explainable_stmt
-format_name: 
-  { TRADITIONAL | JSON }
-explainable_stmt: 
-  { SELECT statement
- | DELETE statement
- | INSERT statement
- | REPLACE statement
- | UPDATE statement }
+EXPLAIN [explain_type] [PRETTY | PRETTY_COLOR] dml_statement;
+
+explain_type：
+    BASIC 
+  | OUTLINE
+  | EXTENDED
+  | EXTENDED_NOADDR
+  | PARTITIONS 
+  | FORMAT = {TRADITIONAL| JSON}
+
+dml_statement:
+    SELECT statement 
+  | DELETE statement 
+  | INSERT statement 
+  | UPDATE statement 
+  /* 仅 Oracle 模式下支持 */
+  | MERGE statement
+  /* 仅 MySQL 模式下支持 */
+  | REPLACE statement 
 ```
 
 `EXPLAIN` 命令适用于 `SELECT`、`DELETE`、`INSERT`、`REPLACE` 和 `UPDATE` 语句，显示优化器所提供的有关语句执行计划的信息，包括如何处理该语句，如何联接表以及以何种顺序联接表等信息。
@@ -45,7 +55,7 @@ Query OK, 0 rows affected
 obclient> CREATE TABLE p2table(c1 INT ,c2 INT) PARTITION BY HASH(c1) PARTITIONS 4;
 Query OK, 0 rows affected
 
-obclient> EXPLAIN EXTENDED PRETTY_COLOR SELECT  * FROM p1table p1 JOIN p2table p2 ON p1.c1=p2.c2\G
+obclient> EXPLAIN EXTENDED PRETTY_COLOR SELECT  * FROM p1table p1 JOIN p2table p2 ON p1.c1=p2.c2；
 *************************** 1. row ***************************
 Query Plan: ==========================================================
 |ID|OPERATOR                     |NAME    |EST. ROWS|COST|
@@ -101,11 +111,11 @@ obclient> SELECT /*TPC-DS Q3*/ *
                   AND item.i_manufact_id = 914 
                   AND dt.d_moy = 11 
            GROUP  BY dt.d_year, 
-                  item.i_brand, 
-                  item.i_brand_id 
+                     item.i_brand, 
+                     item.i_brand_id 
            ORDER  BY dt.d_year, 
-                  sum_agg DESC, 
-                  brand_id) 
+                     sum_agg DESC, 
+                     brand_id) 
      WHERE ROWNUM <= 100; 
 ```
 
@@ -185,7 +195,7 @@ OceanBase 数据库执行计划中的各列的含义如下：
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>在表操作中，<code>NAME</code> 字段会显示该操作涉及的表的名称（别名），如果是使用索引访问，还会在名称后的括号中展示该索引的名称， 例如 <code>t1(t1_c2)</code> 表示使用了 <code>t1_c2</code> 索引。如果扫描的顺序是逆序，还会在后面使用 <code>RESERVE</code> 关键字标识，例如 <code>t1(t1_c2,RESERVE)</code>。</p>
+    <p>在表操作中，<code>NAME</code> 字段会显示该操作涉及的表的名称（别名），如果是使用索引访问，还会在名称后的括号中展示该索引的名称， 例如 <code>t1(t1_c2)</code> 表示使用了 <code>t1_c2</code> 索引。如果扫描的顺序是逆序，还会在后面使用 <code>REVERSE</code> 关键字标识，例如 <code>t1(t1_c2,REVERSE)</code>。</p>
   </main>
 
 OceanBase 数据库 `EXPLAIN` 命令输出的第一部分是执行计划的树形结构展示。其中每一个操作在树中的层次通过其在 `operator` 中的缩进予以展示，层次最深的优先执行，层次相同的以特定算子的执行顺序为标准来执行。
@@ -206,3 +216,5 @@ Outputs & filters:
   4 - output([t1.c1], [t1.c2]), filter(nil),
       access([t1.c1], [t1.c2]), partitions(p0)
 ```
+
+为了更好地读懂 OceanBase 数据库 EXPLAIN 信息，请参见 [执行计划算子](2.execution-plan-operator/1.table-scan.md)。
