--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/10.manage-external-tables-of-mysql-mode/2.create-a-external-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/10.manage-external-tables-of-mysql-mode/2.create-a-external-table-of-mysql-mode.md
@@ -147,7 +147,7 @@ FORMAT = (
     SET GLOBAL SECURE_FILE_PRIV = "/home/admin/";
     ```
 
-    命令执行成功后，需要重启会话，修改才能生效。
+    命令执行成功后，需要重启 OBServer 节点后，修改才能生效。
 
 3. 用户租户登录数据库后，创建外表 `ext_t3`。
 
