--- a/zh-CN/7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/3.backup-architecture.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/3.backup-architecture.md
@@ -20,7 +20,7 @@ OceanBase 数据库提供了租户级别的日志归档能力。
 
 OceanBase 数据库提供了租户级别的数据备份的能力。
 
-数据备份的流程均由 Root Service 节点调度，并按照日志流进程备份。备份数据包括分区的元信息和宏块数据。物理备份是指宏块数据的物理备份，元信息是内存序列化后的值。
+数据备份的流程均由 Root Service 节点调度，并按照日志流进行备份。备份数据包括分区的元信息和宏块数据。物理备份是指宏块数据的物理备份，元信息是内存序列化后的值。
 
 OceanBase 数据库的基线宏块具有全局唯一的逻辑标识，这个逻辑标识提供了增量备份重用宏块的能力。在 OceanBase 数据库中，一次增量备份指的是全量元信息的备份 + 增量的数据宏块的备份。增量备份的恢复和全量备份的恢复在流程基本一致，性能上也没有差别，只是会根据逻辑标识在不同的 backup_set 之间读取宏块。
 
