修改 1.mysqlclient-connection-to-oceanbase-database-sample-program.md

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.sample-program-of-mysql-mode/2.python/1.mysqlclient-connection-to-oceanbase-database-sample-program.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.sample-program-of-mysql-mode/2.python/1.mysqlclient-connection-to-oceanbase-database-sample-program.md
@@ -323,12 +323,12 @@ pip 21.3.1 from /usr/local/lib/python3.6/site-packages/pip (python 3.6)
    2. 运行以下命令，安装项目所需的 Python 库。
 
        ```shell
-       sudo pip install -r requirements.txt
+       pip install -r requirements.txt
        ```
 
     <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>安装 mysqlclient 库，也可以直接运行 <code>sudo pip install mysqlclient</code> 命令。</p>
+    <p>安装 mysqlclient 库，也可以直接运行 <code>pip install mysqlclient</code> 命令。</p>
     </main>
 
 ### 步骤四：在 OceanBase 数据库中创建数据库
