--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
@@ -4,48 +4,16 @@
 
 该语句用来创建表组。
 
-OceanBase 数据库当前版本在创建非绑定的 Table Group 时支持使用非模版二级分区，即允许将若干个非模版二级分区添加到 Table Group 当中。
-
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>只有租户下的管理员权限才可以创建表组。</p>
-  </main>
-
 ## 语法
 
 ```sql
-CREATE TABLEGROUP tablegroup_name [opt_tg_partition_option]
-
-
-opt_tg_partition_option:
-     PARTITION BY 
-        HASH column_num [tg_subpartition_option] PARTITIONS int_num
-    | RANGE [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
-    | LIST [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES  list_partition_expr, ...}
-
-tg_subpartition_option:
-     SUBPARTITION BY 
-        RANGE [COLUMNS] column_num SUBPARTITION TEMPLATE {SUBPARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
-    | HASH column_num [SUBPARTITIONS INTNUM]
-    | LIST [COLUMNS] column_num SUBPARTITION TEMPLATE {SUBPARTITION partition_name VALUES  list_partition_expr, ...}
-```
-
-创建表组的非模版二级分区的语法如下：
-
-```sql
-CREATE TABLEGROUP  <tablegroup_name> [opt_tg_partition_option] 
+CREATE TABLEGROUP  tablegroup_name [ PARTITION BY opt_tg_partition_option ] 
 
 opt_tg_partition_option:
-     PARTITION BY 
-    | HASH column_num [tg_subpartition_option] PARTITIONS int_num
-    | RANGE [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
-    | LIST [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES list_partition_expr, ...}
-
-tg_subpartition_option:
-      SUBPARTITION BY 
-    | RANGE [COLUMNS] column_num SUBPARTITION {SUBPARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
-    | LIST [COLUMNS] column_num SUBPARTITION  {SUBPARTITION partition_name VALUES  list_partition_expr, ...}
-    | HASH [SUBPARTITIONS int_num]
+ 
+      HASH [column_num] PARTITIONS int_num
+    | RANGE COLUMNS column_num {PARTITION partition_name VALUES LESS THAN range_partition_expr [, PARTITION partition_name VALUES LESS THAN range_partition_expr]...}
+    | LIST COLUMNS column_num {PARTITION partition_name VALUES list_partition_expr [, PARTITION partition_name VALUES list_partition_expr]...}
 ```
 
 ## 参数解释
@@ -83,114 +51,40 @@ tg_subpartition_option:
   Query OK, 0 rows affected
   ```
 
-### 创建模板二级分区表组
 
-* 创建 RANGE COLUMNS + RANGE COLUMNS 模式二级分区表组 `tblgroup3`。
+
+* 创建 Range Columns 分区的表组。
 
   ```sql
-  obclient> CREATE TABLEGROUP tblgroup3 PARTITION BY RANGE COLUMNS 1
-  SUBPARTITION BY RANGE  COLUMNS 1
-  SUBPARTITION TEMPLATE
-  (
-   SUBPARTITION rp1 VALUES LESS THAN (2019),
-   SUBPARTITION rp2 VALUES LESS THAN (2020),
-   SUBPARTITION rp3 VALUES LESS THAN (2021)
-  )
-  (
-   PARTITION p0 VALUES LESS THAN (100),
-   PARTITION p1 VALUES LESS THAN (200),
-   PARTITION p2 VALUES LESS THAN (300)
-  )
-  ;
+  obclient> CREATE TABLEGROUP tblgroup3 PARTITION BY RANGE COLUMNS 1 
+              ( PARTITION p0 VALUES LESS THAN(100),
+                PARTITION p1 VALUES LESS THAN(200)
+               );
   Query OK, 0 rows affected
   ```
 
-* 创建 RANGE COLUMNS + LIST COLUMNS 二级分区表组 `tblgroup4`。
+
+* 创建 List Columns 分区的表组。
 
   ```sql
-  obclient> CREATE TABLEGROUP tblgroup4 PARTITION BY RANGE COLUMNS 1
-  SUBPARTITION BY LIST COLUMNS 1
-  SUBPARTITION TEMPLATE
-  (
-   SUBPARTITION rp0 VALUES  ('00','01'),
-   SUBPARTITION rp1 VALUES  ('02','03'),
-   SUBPARTITION rp2 VALUES  ('04','05')
-  )
-  (
-   PARTITION p0 VALUES LESS THAN (2019),
-   PARTITION p1 VALUES LESS THAN (2020),
-   PARTITION p2 VALUES LESS THAN (2021)
-  );
+  obclient> CREATE TABLEGROUP tblgroup4 PARTITION BY LIST COLUMNS 1 
+              ( PARTITION p_northwest VALUES ('OR', 'WA'),
+                PARTITION p_southwest VALUES ('AZ', 'UT', 'NM')
+              );
   Query OK, 0 rows affected
   ```
 
-### 创建非模板二级分区表组
-
-* 创建 RANGE COLUMNS + RANGE COLUMNS 二级分区的表组 `tblgroup6`。
+* 创建 Hash 分区的表组。
 
   ```sql
-  obclient> CREATE TABLEGROUP tblgroup6 PARTITION BY RANGE COLUMNS 1
-    SUBPARTITION BY RANGE COLUMNS 1
-  (
-  PARTITION p0 VALUES LESS THAN (100)
-     (
-     SUBPARTITION sp0 VALUES LESS THAN (2018), 
-     SUBPARTITION sp1 VALUES LESS THAN (2019),
-     SUBPARTITION sp2 VALUES LESS THAN (2020),
-     SUBPARTITION sp3 VALUES LESS THAN (2021)
-     ),
-  PARTITION p1 VALUES LESS THAN (200)
-    ( 
-    SUBPARTITION sp4 VALUES LESS THAN (2018),
-    SUBPARTITION sp5 VALUES LESS THAN (2019),
-    SUBPARTITION sp6 VALUES LESS THAN (2020),
-    SUBPARTITION sp7 VALUES LESS THAN (2021)
-    )
-  );
+  obclient> CREATE TABLEGROUP tblgroup5 PARTITION BY HASH PARTITIONS 10;
   Query OK, 0 rows affected
   ```
 
-* 创建 RANGE COLUMNS + LIST COLUMNS 二级分区的表组 `tblgroup7`。
 
-  ```sql
-  obclient> CREATE TABLEGROUP tb1 PARTITION BY RANGE COLUMNS 1
-   SUBPARTITION BY LIST COLUMNS 1
-  (
-  PARTITION p0 VALUES LESS THAN (2019)
-    (SUBPARTITION p0sp0 VALUES ('00', '03'),
-     SUBPARTITION p0sp1 VALUES ('04', '06'),
-     SUBPARTITION p0sp2 VALUES ('07', '09')
-    ),
-  PARTITION p1 VALUES LESS THAN ( 2020)
-    (SUBPARTITION p1sp0 VALUES ('00', '03'),
-     SUBPARTITION p1sp1 VALUES ('04', '06'),
-     SUBPARTITION p1sp2 VALUES ('07', '09')
-    ),
-  PARTITION p2 VALUES LESS THAN (2021)
-    (SUBPARTITION p2sp0 VALUES ('00', '03'),
-     SUBPARTITION p2sp1 VALUES ('04', '06'),
-     SUBPARTITION p2sp2 VALUES ('07', '09'))
-   );
-  Query OK, 0 rows affected
-  ```
 
-* 创建 RANGE COLUMNS + Hash 二级分区的表组 `tblgroup8`。
 
-  ```sql
-  obclient> CREATE TABLEGROUP tblgroup8  PARTITION BY RANGE COLUMNS 1
-  SUBPARTITION BY HASH SUBPARTITIONS 1
-  (
-  PARTITION p0 VALUES LESS THAN (2020)
-    (
-     SUBPARTITION p0sp1, 
-     SUBPARTITION p0sp2
-     ),
-  PARTITION p1 VALUES LESS THAN (2021) 
-     (
-      SUBPARTITION p1sp1, 
-      SUBPARTITION p1sp2, 
-      SUBPARTITION p1sp3
-      )
-  ); 
-  Query OK, 0 rows affected
-  ```
+
+
+
+
