--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
@@ -23,26 +23,26 @@
 
 ## 示例
 
-* 创建 List Columns 分区的表组 `tg1_lc` 和 List Columns 分区的表 `t1_lc`，并将表添加至表组。
+创建 List Columns 分区的表组 `tg1_lc` 和 List Columns 分区的表 `t1_lc`，并将表添加至表组。
 
-   ```sql
-   obclient> CREATE TABLEGROUP tg1_lc PARTITION BY LIST COLUMNS 1
+```sql
+obclient> CREATE TABLEGROUP tg1_lc PARTITION BY LIST COLUMNS 1
                ( PARTITION p0 VALUES IN(1,2),
                  PARTITION p1 VALUES IN(3,4),
                  PARTITION p2 VALUES IN(5,6)
                ); 
-   Query OK, 0 rows affected
+Query OK, 0 rows affected
 
-   obclient> CREATE TABLE t1_lc (id INT NOT NULL,name varchar(50),t_date date NOT NULL) 
+obclient> CREATE TABLE t1_lc (id INT NOT NULL,name varchar(50),t_date date NOT NULL) 
                PARTITION BY LIST COLUMNS(id)
                ( PARTITION p0 VALUES IN(1,2),
                  PARTITION p1 VALUES IN(3,4),
                  PARTITION p2 VALUES IN(5,6)
                ); 
-   Query OK, 0 rows affected
+Query OK, 0 rows affected
 
-   obclient> ALTER TABLEGROUP tg1_lc ADD TABLE t1_lc;
-   Query OK, 0 rows affected
-   ```
+obclient> ALTER TABLEGROUP tg1_lc ADD TABLE t1_lc;
+Query OK, 0 rows affected
+```
 
 
