--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/11.alter-tablegroup-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/11.alter-tablegroup-of-oracle-mode.md
@@ -19,15 +19,15 @@ ALTER TABLEGROUP tablegroup_name ADD [TABLE] table_name [, table_name...];
 
 ## 示例
 
-* 创建表组 `tblgroup1`，并创建两张关系表 `tbl1` 和 `tbl2`。
+创建表组 `tblgroup1`，并创建两张关系表 `tbl1` 和 `tbl2`。
 
-  ```sql
-  obclient> CREATE TABLEGROUP tblgroup1 PARTITION BY HASH PARTITIONS 10;
-  Query OK, 0 rows affected
+```sql
+obclient> CREATE TABLEGROUP tblgroup1 PARTITION BY HASH PARTITIONS 10;
+Query OK, 0 rows affected
   
-  obclient> CREATE TABLE tbl1(col1 INT, col2 INT) TABLEGROUP = tblgroup1  PARTITION BY HASH(col1) PARTITIONS 10;
-  Query OK, 0 rows affected
+obclient> CREATE TABLE tbl1(col1 INT, col2 INT) TABLEGROUP = tblgroup1  PARTITION BY HASH(col1) PARTITIONS 10;
+Query OK, 0 rows affected
   
-  obclient> CREATE TABLE tbl2(col1 INT, col2 INT) TABLEGROUP = tblgroup1 PARTITION BY HASH(col2) PARTITIONS 10;
-  Query OK, 0 rows affected
-  ```
+obclient> CREATE TABLE tbl2(col1 INT, col2 INT) TABLEGROUP = tblgroup1 PARTITION BY HASH(col2) PARTITIONS 10;
+Query OK, 0 rows affected
+```
