--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
@@ -6,6 +6,7 @@
 
 * 发布时间：2023 年 5 月 19 日
 * 版本号：V2.2.77 BP17
+* RPM 版本号：oceanbase-2.2.77-117000112023051914
 
 ### 功能增强
 
@@ -62,10 +63,11 @@
 
 * 发布时间：2023 年 2 月 14 日
 * 版本号：V2.2.77 BP16
+* RPM 版本号：oceanbase-2.2.77-116000022023021412
 
 ### 功能增强
 
-  新增支持 OBKV 热点行更新的 GROUP COMMIT 能力。在热点行高并发更新场景下，服务端对热点行的更新做聚合，避免每一个操作都去申请行锁、释放行锁，优化行锁竞争等待时间，提升热点行更新速度。
+新增支持 OBKV 热点行更新的 GROUP COMMIT 能力。在热点行高并发更新场景下，服务端对热点行的更新做聚合，避免每一个操作都去申请行锁、释放行锁，优化行锁竞争等待时间，提升热点行更新速度。
 
 ### 缺陷修复
 
@@ -93,6 +95,7 @@
 
 * 发布时间：2023 年 1 月 10 日
 * 版本号：V2.2.77 BP15
+* RPM 版本号：oceanbase-2.2.77-115000012023010607
 
 ### 功能增强
 
@@ -109,7 +112,7 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 * 修复在计划命中 Plan Cache 的情况，Merge into 执行结果错误的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045544?back=kb)】
 * 修复在 JSON 生成列上创建索引的场景中存在内存泄漏的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045547?back=kb)】
 * 修复备份数据自动清理 `backup_set` 失败的问题。
-* 修复 Oracle 模式下，Package 中使用 Cursor 进行循环操作报错 4179 的问题。
+* 修复 Oracle 模式下，Package 中使用 Cursor 进行循环操作报错 4179的问题。
 * 修复因 SLOG 回放错误引起的备库重启失败的问题。
 * 修复 LPAD 函数处理特殊字符（ascii 码为 0x03、0x04、0x05、0x06）返回结果错误的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045545?back=kb)】
 * 修复超时备份数据清理是，清理任务长期处于 DOING 状态无法停止的问题。
@@ -127,6 +130,7 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 
 * 发布时间：2022 年 12 月 04 日
 * 版本号：V2.2.77 BP14
+* RPM 版本号：oceanbase-2.2.77-114000072022120410
 
 ### 功能增强
 
@@ -175,6 +179,8 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 
 * 版本号：V2.2.77 BP13
 
+* RPM 版本号：oceanbase-2.2.77-113000052022082622
+
 ### 功能增强
 
 * 支持限定场景下的添加分区能力，仅支持一级 RANGE 分区表在非末尾位置添加一级分区， 分区添加期间需要用户保证无新分区的数据写入。该功能通过租户级配置项 `_enable_add_between_range_partitions` 开启。
@@ -214,6 +220,8 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 
 * 版本号：V2.2.77 BP12
 
+* RPM 版本号：oceanbase-2.2.77-20220612090508
+
 ### 缺陷修复
 
 * 修复 Oracle 模式下，指定 GBK 字符集创建存储过程时在 SQL Prepare 阶段 OBServer 节点出现非预期的挂起的问题。
@@ -242,6 +250,8 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 * 发布时间：2022 年 5 月 2 日
 
 * 版本号：V2.2.77 BP11
+
+* RPM 版本号：oceanbase-2.2.77-20220502140811
 
 ### 功能增强
 
@@ -274,6 +284,8 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 * 发布时间：2022 年 1 月 17 日
 
 * 版本号：V2.2.77 BP10
+
+* RPM 版本号：oceanbase-2.2.77-20220116224111
 
 ### 功能增强
 
@@ -349,6 +361,8 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 
 * 版本号：V2.2.77 BP9
 
+* RPM 版本号：oceanbase-2.2.77-20211119120733
+
 ### 缺陷修复
 
 * 修复 PX 执行 `close` 阶段导致报错 `-4038` 的问题。
@@ -409,6 +423,8 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 
 * 版本号：V2.2.77 BP8
 
+* RPM 版本号：oceanbase-2.2.77-20211117180427
+
 ### 功能增强
 
   增加内部表 `__ALL_VIRTUAL_PROCESSLIST`，展示事务超时状态。
@@ -455,6 +471,8 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 
 * 版本号：V2.2.77 BP7
 
+* RPM 版本号：oceanbase-2.2.77-20210923214552
+
 ### 功能增强
 
 * 优化分区表 `SQL PLAN` 淘汰机制。
@@ -495,6 +513,8 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 
 * 版本号：V2.2.77 BP6
 
+* RPM 版本号：oceanbase-2.2.77-20210825181323
+
 ### 缺陷修复
 
 * 修复了备份的备份在失败的情况下备份 `SET` 被标记删除的问题。
@@ -524,6 +544,8 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 * 发布时间：2021 年 7 月 31 日
 
 * 版本号：V2.2.77 BP5
+
+* RPM 版本号：oceanbase-2.2.77-20210730214129
 
 ### 功能增强
 
@@ -569,6 +591,8 @@ MySQL 模式的 SQL_MODE 如下默认行为变更:
 
 * 版本号：V2.2.77 BP4
 
+* RPM 版本号：oceanbase-2.2.77-20210712224820
+
 ### 功能增强
 
 * MySQL 模式支持 `MAKETIME` 函数。
@@ -600,6 +624,8 @@ MySQL 模式的 SQL_MODE 如下默认行为变更:
 * 发布时间：2021 年 6 月 18 日
 
 * 版本号：V2.2.77 BP3
+
+* RPM 版本号：oceanbase-2.2.77-20210618130343
 
 ### 功能增强
 
@@ -647,6 +673,8 @@ MySQL 模式的 SQL_MODE 如下默认行为变更:
 
 * 版本号：V2.2.77 BP2
 
+* RPM 版本号：oceanbase-2.2.77-20210604113922
+
 ### 功能增强
 
 * MySQL 模式下 `LIKE` 语法内支持引号等特殊字符转义。
@@ -678,6 +706,8 @@ MySQL 模式的 SQL_MODE 如下默认行为变更:
 * 发布时间：2021 年 5 月 27 日
 
 * 版本号：V2.2.77 BP1
+
+* RPM 版本号：oceanbase-2.2.77-20210526202046
 
 ### 功能增强
 
@@ -712,6 +742,8 @@ MySQL 模式的 SQL_MODE 如下默认行为变更:
 * 发布时间：2021 年 5 月 8 日
 
 * 版本号：V2.2.77
+
+* RPM 版本号：oceanbase-2.2.77-20210508211731
 
 ### 版本定位
 
