--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/98.V4.1/97.V4.1.0_ee.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/98.V4.1/97.V4.1.0_ee.md
@@ -1,11 +1,38 @@
 # OceanBase 数据库企业版 V4.1.0
 
+## V4.1.0 BP1
+
+### 版本信息
+
+* 发布时间：2023 年 5 月 8 日
+* 版本号：V4.1.0 BP1
+* RPM 版本号：oceanbase-4.1.0.0-101000052023050621
+
+### 配置项变更
+
+| 配置项 | 修改类型 | 默认值 | 描述 |
+|------|---------|--------|------|
+| memory_limit | 下限值修改 | 0 | 指 OBServer 节点的内存上限，默认值为 0，当设置为 0 时，会根据机器的 `物理内存*memory_limit_percentage` 来计算可用的内存限制。集群级配置项，取值范围由 [4G, +∞) 调整为 [1G, +∞)。<main id="notice" type='notice'><h4>注意</h4><p>仲裁服务模式启动时，最低可设为 1G ；出于稳定性考虑，非仲裁服务模式启动时，最低依然为 4G。</p></main>|
+| _easy_memory_limit | 下限值修改 | 4G | 指 OBServer 节点中 Easy 模块的内存上限，默认值为 4G。集群级配置项，取值范围由 [1G, +∞) 调整为  [256M, +∞)。<main id="notice" type='notice'><h4>注意</h4><p>仲裁服务模式启动时，最低可设为 256M ；出于稳定性考虑，非仲裁服务模式启动时，最低依然为 1G。</p></main>|
+
+### 缺陷修复
+
+* 修复特殊数据分布场景下，合并时写入内存 Buffer 的编码数据超过 2M，导致合并卡住的问题。
+* 修复并行删除列的场景下，`macro data seq` 序列号生成数据重复，导致备份失败的问题。
+* 修复存储过程调用系统包中的存储过程时，命中 PL 缓存失败问题。
+* 修复虚拟网卡 IP 超过 16 个的情况下，指定网卡获取 IP 失败，导致 OBServer 节点启动失败问题。
+* 修复 2c4g 小规格 ECS 下，仲裁服务所需资源不足无法启动的问题。系统层面降低了最小资源限制；运维层面需要关注本地 `vm.min_free_kbytes` 的系统配置，避免进程启动后剩余资源低于该值导致进程被操作系统 Kill。
+* 修复 `information_schema.STATISTICS` 视图中 `NULLABLE`、`IS_VISIBLE` 字段和 V4.0.0 版本不兼容的问题。
+* 修复 Regexp 函数在同时包含二进制与非二进制参数时不报错、与 MySQL 行为不一致问题。
+* 修复使用生成列索引引起的性能回退问题。
+
 ## V4.1.0
 
 ### 版本信息
 
 * 发布时间：2023 年 3 月 31 日
 * 版本号：V4.1.0
+* RPM 版本号：oceanbase-4.1.0.0-100001122023040322
 
 ### 版本定位
 
@@ -656,28 +683,3 @@ OceanBase 数据库 V4.1.0 版本推荐使用的平台工具版本如下。
 * OceanBase 数据库 V4.1.0 当前仅支持 F 副本，其它类型副本如 R 副本将在后续版本补齐。
 * OceanBase 数据库 V4.1.0 当前仅支持调大租户的 Unit 个数（UNIT_NUM），后续版本将支持调小租户的 Unit 个数。
 * OceanBase 数据库 V4.1.0 版本 DROP DATABASE 操作一次删除数据库内的表的个数超过 200 个时存在删除失败的风险，建议业务先 DROP TABLE 后再执行 DROP DATABASE 操作，后续 V4.2 版本将修复该问题。  
-
-## V4.1.0 BP1
-
-### 版本信息
-
-* 发布时间：2023 年 5 月 8 日
-* 版本号：V4.1.0 BP1
-
-### 配置项变更
-
-| 配置项 | 修改类型 | 默认值 | 描述 |
-|------|---------|--------|------|
-| memory_limit | 下限值修改 | 0 | 指 OBServer 节点的内存上限，默认值为 0，当设置为 0 时，会根据机器的 `物理内存*memory_limit_percentage` 来计算可用的内存限制。集群级配置项，取值范围由 [4G, +∞) 调整为 [1G, +∞)。<main id="notice" type='notice'><h4>注意</h4><p>仲裁服务模式启动时，最低可设为 1G ；出于稳定性考虑，非仲裁服务模式启动时，最低依然为 4G。</p></main>|
-| _easy_memory_limit | 下限值修改 | 4G | 指 OBServer 节点中 Easy 模块的内存上限，默认值为 4G。集群级配置项，取值范围由 [1G, +∞) 调整为  [256M, +∞)。<main id="notice" type='notice'><h4>注意</h4><p>仲裁服务模式启动时，最低可设为 256M ；出于稳定性考虑，非仲裁服务模式启动时，最低依然为 1G。</p></main>|
-
-### 缺陷修复
-
-* 修复特殊数据分布场景下，合并时写入内存 Buffer 的编码数据超过 2M，导致合并卡住的问题。
-* 修复并行删除列的场景下，`macro data seq` 序列号生成数据重复，导致备份失败的问题。
-* 修复存储过程调用系统包中的存储过程时，命中 PL 缓存失败问题。
-* 修复虚拟网卡 IP 超过 16 个的情况下，指定网卡获取 IP 失败，导致 OBServer 节点启动失败问题。
-* 修复 2c4g 小规格 ECS 下，仲裁服务所需资源不足无法启动的问题。系统层面降低了最小资源限制；运维层面需要关注本地 `vm.min_free_kbytes` 的系统配置，避免进程启动后剩余资源低于该值导致进程被操作系统 Kill。
-* 修复 `information_schema.STATISTICS` 视图中 `NULLABLE`、`IS_VISIBLE` 字段和 V4.0.0 版本不兼容的问题。
-* 修复 Regexp 函数在同时包含二进制与非二进制参数时不报错、与 MySQL 行为不一致问题。
-* 修复使用生成列索引引起的性能回退问题。
