--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.sample-program-of-mysql-mode/2.python/1.mysqlclient-connection-to-oceanbase-database-sample-program.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.sample-program-of-mysql-mode/2.python/1.mysqlclient-connection-to-oceanbase-database-sample-program.md
@@ -231,7 +231,7 @@ pip 21.3.1 from /usr/local/lib/python3.6/site-packages/pip (python 3.6)
 
 * 在 Linux 环境下，Python 的 C 扩展需要依赖 Python.h 头文件，而这个头文件通常包含在 python3-devel 包中。如果没有安装 python3-devel 包，则编译 MySQL C API 时会出现找不到 Python.h 的错误。
 
-* 在 Windows 环境下，需要安装 MySQL Connector C （也称为 MySQL Connector/C++）的开发文件，以便在编译过程中使用。如果没有安装 MySQL Connector C，则编译 MySQL C API 时会出现找不到相关库文件的错误。
+* 在 Windows 环境下，需要安装 MySQL Connector C（也称为 MySQL Connector/C++）的开发文件，以便在编译过程中使用。如果没有安装 MySQL Connector C，则编译 MySQL C API 时会出现找不到相关库文件的错误。
 
 #### Linux 环境安装必要的 Python 库
 
@@ -378,7 +378,7 @@ pip 21.3.1 from /usr/local/lib/python3.6/site-packages/pip (python 3.6)
     使用 `cd` 命令进入项目的根目录，示例如下：
 
     ```shell
-    cd /home/admin/python-mysqlclient。
+    cd /home/admin/python-mysqlclient
     ```
 
 2. 运行以下命令启动 `main.py` 程序。
