--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.sample-program-of-mysql-mode/2.python/2.pymysql-connection-to-oceanbase-database-sample-program.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.sample-program-of-mysql-mode/2.python/2.pymysql-connection-to-oceanbase-database-sample-program.md
@@ -59,7 +59,7 @@ python-pymysql
     ```python
     DB_CONFIG = {
         'host': 'localhost',
-        'port': 3306,
+        'port': port,
         'user': 'user_name',
         'password': '',
         'database': 'db_name',
@@ -69,8 +69,8 @@ python-pymysql
 
     参数解释：
 
-    * `host`：数据库主机名或 IP 地址。
-    * `port`：连接数据库的端口号。
+    * `host`：提供 OceanBase 数据库连接 IP。直连通常是一个 OBServer 节点的 IP 地址；通过 ODP 连接的方式通常是一个 ODP 地址。
+    * `port`：提供 OceanBase 数据库连接端口。默认是 `2881`；使用 ODP 的时，默认端口是 `2883`。
     * `user`：连接数据库的用户名。直连格式：**{用户名}@{租户名}**；ODP 连接格式：**{用户名称}@{租户名称}#{集群名称}**。更多连接 OceanBase 数据库的信息，请参见 [连接方式概述](../../1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
     * `password`：连接数据库的密码。
     * `database`：要连接的数据库名。
