--- a/en-US/2.quickstart/1.quickly-experience-oceanbase-for-community.md
+++ b/en-US/2.quickstart/1.quickly-experience-oceanbase-for-community.md
@@ -24,7 +24,7 @@ Three deployment solutions are provided for you to quickly get started with Ocea
 
 * Solution 1: Deploy OceanBase Database in a demo environment
 
-   If you have only one server, you can quickly build a demo environment to deploy OceanBase Database. The demo environment provides basic features for you to quickly learn about OceanBase Database, but does not support distributed capabilities or high availability. Therefore, long-term use is not recommended. For more information, see the **Solution 1: Deploy OceanBase Database in a demo environment** section blow.
+   If you have only one server, you can quickly build a demo environment to deploy OceanBase Database. The demo environment provides basic features for you to quickly learn about OceanBase Database, but does not support distributed capabilities or high availability. Therefore, long-term use is not recommended. For more information, see the **Solution 1: Deploy OceanBase Database in a demo environment** section below.
 
 * Solution 2: Deploy OceanBase Database in a cluster
 
