--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.sample-program-of-mysql-mode/2.python/1.mysqlclient-connection-to-oceanbase-database-sample-program.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.sample-program-of-mysql-mode/2.python/1.mysqlclient-connection-to-oceanbase-database-sample-program.md
@@ -92,68 +92,63 @@ OCEANBASE_CONFIG = {
 
 2. 定义创建表的函数。
 
-    定义函数 `create_table`，该函数的作用是在 OceanBase 数据库中创建名为 `test_tbl1` 的表。函数中的详细步骤包括：连接 OceanBase 数据库、创建游标对象、定义 SQL 语句、执行 SQL 语句、关闭游标对象和数据库连接、打印输出执行结果或异常信息。
+    定义函数 `create_table`，该函数的作用是在 OceanBase 数据库中创建名为 `test_tbl1` 的表。使用 `with` 语句管理数据库连接和游标对象的生命周期，保证了数据库连接和游标对象的安全关闭，避免了内存泄漏等问题。定义 SQL 语句，执行 SQL 语句，打印输出执行结果或异常信息。
 
     ```python
     def create_table():
-        try:
-            conn = MySQLdb.connect(**OCEANBASE_CONFIG)
-            cursor = conn.cursor()
-            create_table_sql = """
-                CREATE TABLE test_tbl1 (
-                    id INT UNSIGNED NOT NULL AUTO_INCREMENT,
-                    name VARCHAR(50) NOT NULL,
-                    age INT UNSIGNED NOT NULL,
-                    PRIMARY KEY (id)
-                ) ENGINE=OCEANBASE AUTO_INCREMENT=1
-            """
-            cursor.execute(create_table_sql)
-            cursor.close()
-            conn.close()
+        with MySQLdb.connect(**OCEANBASE_CONFIG) as conn:
+            with conn.cursor() as cursor:
+                try:
+                    create_table_sql = """
+                        CREATE TABLE test_tbl1 (
+                            id INT UNSIGNED NOT NULL AUTO_INCREMENT,
+                            name VARCHAR(50) NOT NULL,
+                            age INT UNSIGNED NOT NULL,
+                            PRIMARY KEY (id)
+                        ) ENGINE=OCEANBASE AUTO_INCREMENT=1
+                    """
+                    cursor.execute(create_table_sql)
 
-            print("Table created successfully")
-        except MySQLdb.Error as err:
-            print(err)
+                    print("Table created successfully")
+                except MySQLdb.Error as err:
+                    print(err)
     ```
 
 3. 定义插入数据的函数。
 
-    定义函数 `insert_record`，该函数主要实现了向指定表中插入一条记录，记录包含 `name` 和 `age` 两个字段。函数中的详细步骤包括：连接数据库、创建游标对象、定义 SQL 语句、执行插入操作、提交事务、关闭游标对象和数据库连接、打印输出执行结果或异常信息。
+    定义函数 `insert_record`，该函数主要实现了向指定表中插入一条记录，记录包含 `name` 和 `age` 两个字段。使用 `with` 语句管理数据库连接和游标对象的生命周期，保证了数据库连接和游标对象的安全关闭，避免了内存泄漏等问题。定义 SQL 语句，执行插入操作，提交事务，打印输出执行结果或异常信息。
 
     ```python
     def insert_record(table_name, name, age):
-        try:
-            conn = MySQLdb.connect(**OCEANBASE_CONFIG)
-            cursor = conn.cursor()
-            insert_sql = f"INSERT INTO {table_name} (name, age) VALUES (%s, %s)"
-            cursor.execute(insert_sql, (name, age))
-            conn.commit()
-            cursor.close()
-            conn.close()
+        with MySQLdb.connect(**OCEANBASE_CONFIG) as conn:
+            with conn.cursor() as cursor:
+                try:
+                    insert_sql = f"INSERT INTO {table_name} (name, age) VALUES (%s, %s)"
+                    cursor.execute(insert_sql, (name, age))
+                    conn.commit()
 
-            print("Record inserted successfully")
-        except MySQLdb.Error as err:
-            print(err)
+                    print("Record inserted successfully")
+                except MySQLdb.Error as err:
+                    print(err)
     ```
 
 4. 定义查询表数据的函数。
 
-    定义函数 `select_all`，该函数主要实现了查询指定表中的所有记录的功能。函数中的详细步骤包括：连接数据库、创建游标对象、定义 SQL 语句、执行查询操作并遍历查询结果、打印输出所有记录、关闭游标对象和数据库连接。如果发生异常，则捕捉异常并打印输出异常信息。
+    定义函数 `select_all`，该函数主要实现了查询指定表中的所有记录的功能。使用 `with` 语句管理数据库连接和游标对象的生命周期，保证了数据库连接和游标对象的安全关闭，避免了内存泄漏等问题。定义 SQL 语句，执行查询操作并遍历查询结果，打印输出所有记录。如果发生异常，则捕捉异常并打印输出异常信息。
 
     ```python
     def select_all(table_name):
-        try:
-            conn = MySQLdb.connect(**OCEANBASE_CONFIG)
-            cursor = conn.cursor()
-            select_sql = f"SELECT * FROM {table_name}"
-            cursor.execute(select_sql)
-            result = cursor.fetchall()
-            for row in result:
-                print(row)
-            cursor.close()
-            conn.close()
-        except MySQLdb.Error as err:
-            print(err)
+        with MySQLdb.connect(**OCEANBASE_CONFIG) as conn:
+            with conn.cursor() as cursor:
+                try:
+                    select_sql = f"SELECT * FROM {table_name}"
+                    cursor.execute(select_sql)
+                    result = cursor.fetchall()
+                    for row in result:
+                        print(row)
+
+                except MySQLdb.Error as err:
+                    print(err)
     ```
 
 #### main.py 代码介绍
