--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.sample-program-of-mysql-mode/2.python/2.pymysql-connection-to-oceanbase-database-sample-program.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.sample-program-of-mysql-mode/2.python/2.pymysql-connection-to-oceanbase-database-sample-program.md
@@ -97,7 +97,7 @@ python-pymysql
 
 3. 插入数据的 SQL 语句。
 
-    定义插入数据的 SQL 语句，向 `test_tbl1` 表中插入了三条数据，分别为 `(John, 20)`、`(Lucy, 25)` 和 `(Tom, 30)`。
+    定义一个向 `test_tbl1` 表插入数据的 SQL 语句，插入的数据将包含三条，每条数据包含两个字段：`name` 和 `age`。每个字段的值将在执行 SQL 语句时，通过占位符 `%s` 的形式被传入。
 
     ```python
     INSERT_DATA_SQL = '''
@@ -143,44 +143,40 @@ python-pymysql
 
 3. 定义创建表的函数。
 
-    定义一个名为 `create_table()` 的函数，输出一条 INFO 级别的日志信息，表示开始创建表。连接数据库，创建游标。执行创建表的 SQL 语句，提交事务并输出日志信息，或回滚事务并输出错误日志信息。最后关闭游标和数据库连接。
+    定义一个名为 `create_table()` 的函数，输出一条 INFO 级别的日志信息，表示开始创建表。使用 `with` 语句管理数据库连接和游标对象的生命周期，保证了数据库连接和游标对象的安全关闭，避免了内存泄漏等问题。执行创建表的 SQL 语句，提交事务并输出日志信息，或回滚事务并输出错误日志信息。
 
     ```python
     def create_table():
         logging.info('Start creating the table')
-        conn = pymysql.connect(**DB_CONFIG)
-        cursor = conn.cursor()
-        try:
-            cursor.execute(CREATE_TABLE_SQL)
-            conn.commit()
-            logging.info('Table creation successful')
-        except Exception as e:
-            conn.rollback()
-            logging.error('Table creation failed, Reason：%s' % e)
-        finally:
-            cursor.close()
-            conn.close()
+        with pymysql.connect(**DB_CONFIG) as conn:
+            with conn.cursor() as cursor:
+                try:
+                    cursor.execute(CREATE_TABLE_SQL)
+                    conn.commit()
+                    logging.info('Table creation successful')
+                except Exception as e:
+                    conn.rollback()
+                    logging.error('Table creation failed, Reason：%s' % e)
     ```
 
 4. 定义插入数据的函数。
 
-    定义一个名为 `insert_data()` 的函数，输出一条 INFO 级别的日志信息，表示开始插入数据。连接数据库，创建游标。执行插入数据的 SQL 语句，提交事务并输出日志信息，或回滚事务并输出错误日志信息。最后关闭游标和数据库连接。
+    定义一个名为 `insert_data()` 的函数，输出一条 INFO 级别的日志信息，表示开始插入数据。使用 `with` 语句管理数据库连接和游标对象的生命周期，保证了数据库连接和游标对象的安全关闭，避免了内存泄漏等问题。执行插入数据的 SQL 语句，提交事务并输出日志信息，或回滚事务并输出错误日志信息。
 
     ```python
     def insert_data():
         logging.info('Start inserting data')
-        conn = pymysql.connect(**DB_CONFIG)
-        cursor = conn.cursor()
-        try:
-            cursor.execute(INSERT_DATA_SQL)
-            conn.commit()
-            logging.info('Data insertion successful')
-        except Exception as e:
-            conn.rollback()
-            logging.error('Data insertion failed, Reason：%s' % e)
-        finally:
-            cursor.close()
-            conn.close()
+        with pymysql.connect(**DB_CONFIG) as conn:
+            with conn.cursor() as cursor:
+                try:
+                    data = [('John', 20), ('Lucy', 25), ('Tom', 30)]
+                    flattened_data = [d for item in data for d in item]
+                    cursor.executemany(INSERT_DATA_SQL, [flattened_data])
+                    conn.commit()
+                    logging.info('Data insertion successful')
+                except Exception as e:
+                    conn.rollback()
+                    logging.error('Data insertion failed, Reason：%s' % e)
     ```
 
 5. 判断当前模块是否被直接运行，并在被直接运行时执行创建表和插入数据的操作。
@@ -212,18 +208,16 @@ python-pymysql
 
 2. 定义查询数据的函数。
 
-    定义一个名为 `select_data()` 的函数，用于从数据库中查询数据。函数中的详细步骤包括：创建数据库连接，使用 `cursor()` 方法创建一个游标对象。使用 `execute()` 方法执行 `SELECT_DATA_SQL` 定义的 SQL 语句查询数据。使用 `fetchall()` 方法获取查询结果，并通过 `for` 循环逐行输出结果。关闭游标和数据库连接。
+    定义一个名为 `select_data()` 的函数，用于从数据库中查询数据。使用 `with` 语句管理数据库连接和游标对象的生命周期，保证了数据库连接和游标对象的安全关闭，避免了内存泄漏等问题。使用 `execute()` 方法执行 `SELECT_DATA_SQL` 定义的 SQL 语句查询数据。使用 `fetchall()` 方法获取查询结果，并通过 `for` 循环逐行输出结果。
 
     ```python
     def select_data():
-        conn = pymysql.connect(**DB_CONFIG)
-        cursor = conn.cursor()
-        cursor.execute(SELECT_DATA_SQL)
-        result = cursor.fetchall()
-        for row in result:
-            print(row)
-        cursor.close()
-        conn.close()
+        with pymysql.connect(**DB_CONFIG) as conn:
+            with conn.cursor() as cursor:
+                cursor.execute(SELECT_DATA_SQL)
+                result = cursor.fetchall()
+                for row in result:
+                    print(row)
     ```
 
 3. 判断当前脚本是否为主程序，如果是则执行 `select_data()` 函数，用于查询数据并输出结果。
