--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/10.manage-external-tables-of-mysql-mode/2.create-a-external-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/10.manage-external-tables-of-mysql-mode/2.create-a-external-table-of-mysql-mode.md
@@ -131,12 +131,12 @@ FORMAT = (
 3,"ali",95
 ```
 
-1. 在任意一个 OBserver 节点上，租户管理员通过本地 Unix Socket 连接集群的 MySQL 租户。
+1. 在任意一个 OBserver 节点上，通过本地 Unix Socket 连接集群的 `sys` 租户。
 
    连接示例如下：
 
    ```shell
-   obclient -S /home/admin/oceanbase/run/sql.sock -uroot@mysql -p********
+   obclient -S /home/admin/oceanbase/run/sql.sock -uroot@sys -p********
    ```
 
    通过本地 Unix Socket 连接 OceanBase 数据库的具体操作及说明，请参见 [secure_file_priv](../../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md)。
